[gd_scene load_steps=3 format=3 uid="uid://b8hege0352ly5"]

[ext_resource type="Texture2D" uid="uid://cmjsr82doi754" path="res://assets/sprites/car/car_empty.png" id="1_0chmd"]
[ext_resource type="Script" path="res://scenes/game/enter_car_animation.gd" id="2_gm5rx"]

[node name="EnterCarAnimation" type="Area2D"]
position = Vector2(38238, 583)
script = ExtResource("2_gm5rx")

[node name="CarSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_0chmd")

[node name="TimeStandingBesidesCar" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimeStandingBesidesCar" to="." method="_on_time_standing_besides_car_timeout"]
